--- a/Flack/Base.lproj/Main.storyboard
+++ b/Flack/Base.lproj/Main.storyboard
@@ -111,7 +111,7 @@
                                 <rect key="frame" x="281" y="107" width="22" height="22"/>
                                 <state key="normal" image="addChannelButton"/>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menuProfileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="M0x-KG-6oC">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menuProfileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="M0x-KG-6oC" customClass="CircleImage" customModule="Flack" customModuleProvider="target">
                                 <rect key="frame" x="16" y="703" width="75" height="75"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="75" id="R6l-Ie-PjH"/>
@@ -363,7 +363,7 @@
                                     </view>
                                 </subviews>
                             </stackView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="smackProfileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="AgK-19-2ZE">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="smackProfileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="AgK-19-2ZE" customClass="CircleImage" customModule="Flack" customModuleProvider="target">
                                 <rect key="frame" x="137" y="391.33333333333331" width="100" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="Hkw-uX-7rS"/>
@@ -410,6 +410,10 @@
                                     <action selector="createAccountPressed:" destination="II4-am-4oy" eventType="touchUpInside" id="C1t-UV-Lb0"/>
                                 </connections>
                             </button>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="P87-Us-6zy">
+                                <rect key="frame" x="169" y="342.66666666666669" width="37" height="37"/>
+                                <color key="color" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -425,15 +429,18 @@
                             <constraint firstItem="yGE-Cy-hEL" firstAttribute="top" secondItem="uA1-gH-jDE" secondAttribute="top" id="Tsh-M8-Luj"/>
                             <constraint firstItem="dNZ-nH-pC2" firstAttribute="centerX" secondItem="3uB-xh-ziE" secondAttribute="centerX" id="Yct-3i-D6l"/>
                             <constraint firstItem="vIK-Tu-kB6" firstAttribute="centerX" secondItem="3uB-xh-ziE" secondAttribute="centerX" id="eQ0-6Z-TFM"/>
+                            <constraint firstItem="P87-Us-6zy" firstAttribute="centerX" secondItem="3uB-xh-ziE" secondAttribute="centerX" id="ibW-uR-Poc"/>
                             <constraint firstItem="7qN-RI-Xrv" firstAttribute="top" secondItem="51G-va-sdu" secondAttribute="bottom" constant="10" id="lbK-wy-Dfj"/>
                             <constraint firstItem="uA1-gH-jDE" firstAttribute="bottom" secondItem="YXM-Ff-fOp" secondAttribute="bottom" constant="23" id="tr9-s1-Mlg"/>
                             <constraint firstItem="AgK-19-2ZE" firstAttribute="centerX" secondItem="3uB-xh-ziE" secondAttribute="centerX" id="tsM-7P-hDC"/>
+                            <constraint firstItem="P87-Us-6zy" firstAttribute="centerY" secondItem="3uB-xh-ziE" secondAttribute="centerY" constant="-45" id="wOb-6A-zNo"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="uA1-gH-jDE"/>
                     </view>
                     <connections>
                         <outlet property="emailTxt" destination="ghI-4e-gRG" id="756-f3-bhG"/>
                         <outlet property="passTxt" destination="2mW-yV-BSj" id="h4Z-hK-Bpg"/>
+                        <outlet property="spinner" destination="P87-Us-6zy" id="SUs-l5-rej"/>
                         <outlet property="userImg" destination="AgK-19-2ZE" id="o6A-VI-Nfr"/>
                         <outlet property="userTxt" destination="uW4-qh-L6A" id="B0r-9v-mn1"/>
                         <segue destination="fli-R6-Hc6" kind="unwind" identifier="unwindToChannelVC" unwindAction="unwindToChannelVCWithA:" id="A7c-fw-5sE"/>
